Build IDOR Assistant v3 workbench